@@ -57,6 +57,11 @@ Please visit http://aegisub.net to download latest version
 - Added option ("keep raw dialogue data", default false) that makes Aegisub use less RAM at a small performance cost when set to false. (AMZ)
 - The line timing extending in timing post-processor is now governed by the "timing processor adjascent bias" option (1.0 [default] = move end, 0.0 = move start, 0.5 = move to halfway point, etc) (AMZ)
 - Middle clicking the video seek bar and audio display will now focus them. (AMZ)
+- Search and Replace dialogue made modeless. (Pomyk)
+- Fixed bug related to moving elements up and down in File Export dialog. (Pomyk)
+- Scrollbar and sliders in audio box can no longer receive focus. (Pomyk)
+- Select lines dialog now has an option on how to deal with comment lines. (Pomyk)
+- Last folder for all the file selection dialogs are now remembered in config.dat. (Pomyk)
 
 
 = 1.09 beta - 2006.01.16 ===========================
